brand logo has been added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer - Gear</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/3760e97aed.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="poppins-regular">
     <header>
-        
+        <section class="header-sec">
+            <nav>
+                <h2 class="brand-name">Influencer products</h2>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Product</a></li>
+                    <li><a href="">Sign up</a></li>
+                    <li><a href="">Login</a></li>
+                    <img class="search" src="logos/search.png" alt="">
+                    <img class="cart" src="logos/cart.png" alt="">
+                </ul>
+            </nav>
+        </section>
+
+        <section class="banner-sec">
+            <div class="banner-container">
+               <div class="container">
+                <h1 class="banner-heading">Start your Journey as <br>Influencer</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem<br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="prebook-btn">Prebook Now <i class="fa-solid fa-arrow-right"></i></button>
+               </div>
+               <img class="camera" src="images/main-camera.png" alt="">
+            </div>
+        <div class="brand-img">
+                <hr>
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+                <hr>
+        </div>
+        </section>
+
     </header>
 
     <main>
